--- a/我再也不会把孩子送去学校/06.Learn drive and reward.md
+++ b/我再也不会把孩子送去学校/06.Learn drive and reward.md
@@ -321,13 +321,12 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 
 以类似的方式，在计算机上键入每个句子时，你的打字错误会越来越少。你知道键盘上的「)」在哪里吗？「}」呢？你打字越流畅，你就越有可能忘记这个细节。当有意识地控制动作顺序消失后时，键盘上「)」位置的陈述性知识可能作为「垃圾」被丢弃。它不再被需要了。
 
-### 6.16.4 Declarative learning reward
+### 6.16.4 陈述性学习奖励
 
-Things are a bit more complex in explaining declarative learn drive. There is a definite reward to declarative learning. Some things are just interesting, and finding out the truth is pleasing. At the neural level, the brain will scan inputs and neural activations to look for areas of high learn entropy with maximum delivery of new knowledge matching the current status of memory. Any meaningful message of low probability will be deemed more attractive. A bright fractal pattern will be deemed beautiful. A gray randomness of colors will be deemed boring. The same will occur in the case of a more complex visual message. A vibrant forest is beautiful. The same forest may seem unattractive in winter, in draught, or under the impact of environmental pollution. [Steven Pinker](https://en.wikipedia.org/wiki/Steven_Pinker) remarked that we are attracted to images that ooze vitality. I disagree. The attraction is much wider. We may be equally well attracted to a deathly volcano or a frozen landscape of Antarctica. We love environments, signals, messages, or brain activations that can express complex information using simple models. The picture of a beautiful beach can be represented by a couple of simple shapes and textures.
+在解释陈述性学习内驱力时，情况要复杂一些。陈述性学习有明确的回报。有些事情是有趣的，发现真相是令人愉快的。在神经层面，大脑将扫描输入并产生神经活跃，以寻找学习熵高的领域，这些领域最大限度地提供与当前记忆状态相匹配的新知识。任何有意义的低概率信息都会被认为更具吸引力。明亮的分形图案将被认为是美丽的。灰色的随机颜色会被认为是无聊的。同样的情况也会发生在更复杂的视觉信息上。生机勃勃的森林是美丽的。但同样的森林在冬天、在干旱中，或者在环境污染的影响下，可能看起来并不吸引人。[StevenPinker](https://en.wikipedia.org/wiki/Steven_Pinker) 说，我们被充满活力的图像所吸引。但我不同意。因为吸引力要宽泛得多。我们可能同样被一座死火山或南极洲的冰冻景观所吸引。我们喜欢使用简单模型表达复杂信息的环境、信号、信息或大脑活动。美丽海滩的图片可以用一些简单的形状和纹理来表示。
 
-Entropy of information is related to compressability of data. Signal processing begins on the input. The retina performs a 100-fold compression of the visual input signal. The hippocampus and the visual cortex receive simple representations of shapes and relationships. Those may end up changing the status of a single synapse in cortical long-term memory storage.
-
-The whole learn drive is based on seeking effective ways of representing knowledge in neural networks. [Learn drive](https://supermemo.guru/wiki/Learn_drive), memory optimization in sleep, and forgetting are essential to maximize compressibility, abstractness, usability, and performance. This is how the brain makes sure that we can see a complex world using simple representations. That's the core of human intelligence. If artificial intelligence researchers could equip robots with a human-like learn drive, given sufficient memory, their learning capacity might be inexhaustible.
+信息熵与数据的可压缩性有关。信号处理从输入开始。视网膜对视觉输入信号进行 100 倍的压缩。海马体和视皮层接受形状和关系的简单表示。这些可能最终改变皮质长期记忆储存中单个突触的状态。
+整个[学习内驱力](https://supermemo.guru/wiki/Learn_drive)都是建立在寻找有效的神经网络知识表示方法的基础上的。学习内驱力、睡眠中的记忆优化和遗忘对于最大限度地提高可压缩性、抽象性、可用性和性能至关重要。这就是大脑如何通过简单的表示来确保我们能够看到一个复杂的世界。这是人类智力的核心。如果人工智能研究人员能够为机器人配备类似人类的学习内驱力，只要有足够的记忆空间，他们的学习能力可能是取之不尽用之不竭的。
 
 ### 6.16.5 Reward centers in learning
 
