更新翻译规则

--- a/我再也不会把孩子送去学校/00.Content目录.md
+++ b/我再也不会把孩子送去学校/00.Content目录.md
@@ -1,34 +1,34 @@
-- 1Introduction
-  - [1.1Failure of schooling](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Failure_of_schooling)
-  - [1.2Scrapping the school system](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Scrapping_the_school_system)
-  - [1.3Brain-based reform](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Brain-based_reform)
-  - [1.4Love for children](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Love_for_children)
-  - [1.5Executive Summary](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Executive_Summary)
-  - [1.6Kids are not adults in minature](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Kids_are_not_adults_in_minature)
-  - [1.7Fundamental law of learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fundamental_law_of_learning)
-  - [1.8Message to our future selves](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Message_to_our_future_selves)
-  - [1.9Dangers of early instruction](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Dangers_of_early_instruction)
-  - [1.10Futility of cramming](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Futility_of_cramming)
-  - [1.11Learning skill impotence](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_skill_impotence)
-  - [1.12Grand Education Reform](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Grand_Education_Reform)
-  - [1.13When school is a blessing](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#When_school_is_a_blessing)
-  - [1.14The Optimization Error](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_Optimization_Error)
-  - [1.15Fostering diversity](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fostering_diversity)
-  - [1.16Death of knowledge](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Death_of_knowledge)
-  - [1.17Prediction: Death of schooling](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prediction:_Death_of_schooling)
-- [2Motto](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Motto)
-- [3Brain science](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Brain_science)
-- 4Learn drive
-  - [4.1Definition](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Definition)
-  - [4.2Terminology](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Terminology)
-  - [4.3Novelty and stress](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Novelty_and_stress)
-  - [4.4Suppression of the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Suppression_of_the_learn_drive)
-  - [4.5Further reading](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Further_reading)
-  - [4.6Summary: Learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Learn_drive)
-- 5Effect of schooling on the learn drive
-  - [5.1Learn drive vs. age](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._age)
-  - [5.2Learn drive vs. knowledge](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._knowledge)
-  - [5.3Learn drive vs. learning](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._learning)
+- 1Introduction前言
+  - [1.1Failure of schooling学校教育的失败](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Failure_of_schooling)
+  - [1.2Scrapping the school system废除学校制度](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Scrapping_the_school_system)
+  - [1.3Brain-based reform基于大脑的改革](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Brain-based_reform)
+  - [1.4Love for children对孩子的爱](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Love_for_children)
+  - [1.5Executive Summary执行概要](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Executive_Summary)
+  - [1.6Kids are not adults in minature孩子不是微型的成年人](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Kids_are_not_adults_in_minature)
+  - [1.7Fundamental law of learning学习基本定律](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fundamental_law_of_learning)
+  - [1.8Message to our future selves给我们未来的自己的信息](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Message_to_our_future_selves)
+  - [1.9Dangers of early instruction早期教育的危险](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Dangers_of_early_instruction)
+  - [1.10Futility of cramming徒劳的填鸭式](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Futility_of_cramming)
+  - [1.11Learning skill impotence学习能力的丧失](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_skill_impotence)
+  - [1.12Grand Education Reform宏大的教育改革](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Grand_Education_Reform)
+  - [1.13When school is a blessing何时学校的一种眷顾](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#When_school_is_a_blessing)
+  - [1.14The Optimization Error优化错误](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_Optimization_Error)
+  - [1.15Fostering diversity培养多样性](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Fostering_diversity)
+  - [1.16Death of knowledge知识的消亡](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Death_of_knowledge)
+  - [1.17Prediction: Death of schooling语言：学校的死亡](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prediction:_Death_of_schooling)
+- [2Motto箴言](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Motto)
+- [3Brain science脑科学](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Brain_science)
+- 4Learn drive学习内驱力
+  - [4.1Definition定义](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Definition)
+  - [4.2Terminology术语](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Terminology)
+  - [4.3Novelty and stress新奇和压力](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Novelty_and_stress)
+  - [4.4Suppression of the learn drive学习驱力的抑制因素](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Suppression_of_the_learn_drive)
+  - [4.5Further reading延伸阅读](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Further_reading)
+  - [4.6Summary: Learn drive总结：学习内驱力](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Learn_drive)
+- 5Effect of schooling on the learn drive学校教育对学习内驱力的影响
+  - [5.1Learn drive vs. age学习内驱力与年龄](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._age)
+  - [5.2Learn drive vs. knowledge学习内驱力与知识](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._knowledge)
+  - [5.3Learn drive vs. learning学习内驱力与学习](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._learning)
   - [5.4Teacher problem](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Teacher_problem)
   - [5.5Learn drive distortions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_distortions)
   - [5.6School enthusiasm](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#School_enthusiasm)
