--- a/我再也不会把孩子送去学校/06.Learn drive and reward学习内驱力和奖励.md
+++ b/我再也不会把孩子送去学校/06.Learn drive and reward学习内驱力和奖励.md
@@ -328,13 +328,19 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 信息熵与数据的可压缩性有关。信号处理从输入开始。视网膜对视觉输入信号进行 100 倍的压缩。海马体和视皮层接受形状和关系的简单表示。这些可能最终改变皮质长期记忆储存中单个突触的状态。
 整个[学习内驱力](https://supermemo.guru/wiki/Learn_drive)都是建立在寻找有效的神经网络知识表示方法的基础上的。学习内驱力、睡眠中的记忆优化和遗忘对于最大限度地提高可压缩性、抽象性、可用性和性能至关重要。这就是大脑如何通过简单的表示来确保我们能够看到一个复杂的世界。这是人类智力的核心。如果人工智能研究人员能够为机器人配备类似人类的学习内驱力，只要有足够的记忆空间，他们的学习能力可能是取之不尽用之不竭的。
 
-### 6.16.5 Reward centers in learning
+### 6.16.5 学习中的奖励中心
 
 In 2014, researchers reported that the [activity in the nucleus accumbens was increased in the state of "high curiosity"](https://supermemo.guru/wiki/Curiosity_improves_learning). They have also demonstrated what we have always known: this state improved memory performance. In addition, that improved performance spilled onto incidental learning, i.e. learning that would not spark curiosity on its own. This research was widely reported in media with a wrong interpretation: "*curiosity primes the brain for better memory*". For example, Scientific American headlined "*Neuroimaging reveals how the brain’s reward and memory pathways prime inquiring minds for knowledge*". The paper itself suggested the need for *"stimulating curiosity"*.
 
+在 2014 年，研究人员报告称，[在「高度好奇」的状态下，伏隔核的活动增加](https://supermemo.guru/wiki/Curiosity_improves_learning)。他们还证明了我们所熟知的：这种状态提高了记忆表现。此外，这种提高的表现也体现在附带学习上，即不依靠本身激发好奇心的学习。这项研究在媒体上被广泛报道，但却以一种错误的解释：「*好奇心会激发大脑，以获得更好的记忆*」。例如，《科学美国人》的标题为「*神经成像揭示了大脑的奖赏和记忆路径是如何激发大脑对知识的探究*」。这篇论文本身就提出了「*激发好奇心*」的必要性。
+
 As reward centers can be involved in the anticipation of pleasure, we should rather see the results of the research as an indicator that the [learn drive](https://supermemo.guru/wiki/Learn_drive) is associated with pleasure. It is the learn drive that causes learning. It is learning that is pleasurable. The headline should be "*Neuroimaging confirms that efficient learning is pleasurable*". In other words, the sequence is not "drive -> pleasure -> learning", but "drive -> learning -> pleasure".
 
+由于奖励中心可能涉及快乐的预期，我们更应该把研究的结果看作是[学习内驱力](https://supermemo.guru/wiki/Learn_drive)与快乐相关的一个迹象。正是学习内驱力引发了学习。学习才是令人愉快的。标题应该是「神经成像证实有效的学习是令人愉快的」。换句话说，顺序不是「内驱力->快乐->学习」，而是「内驱力->学习->快乐」。
+
 Instead of speaking of the need to "stimulate curiosity", which should rather speak of the need to "develop the [learn drive](https://supermemo.guru/wiki/Learn_drive)". The key difference is in perceiving stimulation as quick-fix approach that might be used in a classroom as opposed to a long-term process that takes months and years. An advertising campaing may use cheap tricks to stimulate our curiosity, while a lifelong passion is a formula for insatiable and unwaning [learn drive](https://supermemo.guru/wiki/Learn_drive), which is a perfect warranty for unceasing learning.
+
+与其说需要「激发好奇心」，不如说需要「培养学习动力」。关键的区别在于，将刺激视为一种可能在课堂上使用的快速解决方法，而不是需要数月甚至数年的长期过程。一次广告宣传活动可能会用一些廉价的手段来激发我们的好奇心，而终身的激情则是永不满足、永不衰退的学习动力的公式，这是不断学习的完美保证。
 
 It is true that the state of curiosity will improve attention and this will improve overall learning, however, this should not ever be used as a classroom strategy. Gamification of learning makes sense only if rewards come from target learning, not from learning that surrounds the target. Many learning programs for children use bright colors, unusual sounds or smiling faces to attract attention to induce learning. However, once habituation sets it, this form or artificial gamification stops being effective. Moreover, incidental knowledge does not last. Any effort to employ curiosity to spark incidental learning is non-specific and inefficient. Equally well we might hope that pharmacological intervention, e.g. with Ritalin, could improve learning. Instead, learning must be its own reward.
 
