--- a/我再也不会把孩子送去学校/22.Glossary术语表.md
+++ b/我再也不会把孩子送去学校/22.Glossary术语表.md
@@ -1,4 +1,6 @@
-# 22 术语表
+# 22 Glossary术语表
+
+This terminology is used in [my](https://supermemo.guru/wiki/Piotr_Wozniak) articles on [education](https://supermemo.guru/wiki/Problem_of_Schooling), [sleep](https://supermemo.guru/wiki/Science_of_sleep), and [creatvity](https://supermemo.guru/wiki/Natural_creativity_cycle) (some of this terminology is my own):
 
 这个术语集是[我](https://supermemo.guru/wiki/Piotr_Wozniak)在关于[教育](https://supermemo.guru/wiki/Problem_of_Schooling)、[睡眠](https://supermemo.guru/wiki/Science_of_sleep)和[创造力](https://supermemo.guru/wiki/Natural_creativity_cycle)的文章中使用过的（其中一些术语是我自己定义的）：
 
