--- a/我再也不会把孩子送去学校/05.Effect of schooling on the learn drive学校教育对学习内驱力的影响.md
+++ b/我再也不会把孩子送去学校/05.Effect of schooling on the learn drive学校教育对学习内驱力的影响.md
@@ -1,29 +1,46 @@
-# 5 学校教育对学习内驱力的影响
+# 5 Effect of schooling on the learn drive学校教育对学习内驱力的影响
+
+Coercive schooling suppresses the learn drive and results in diminished long-term effect of learning.
 
 强制性的学校教育抑制了学生的学习内驱力，降低了学生的长期学习效果。
 
-## 5.1 学习内驱力 与 年龄
+## 5.1 学习内驱力与年龄
+
+**The learn drive is a vital instinct that underlies the adaptive development of the central nervous system**. Babies scan their environment for elements of novelty. This is a way of searching for and detecting things that are worth learning. A baby may randomly search the space above its head until it finds a moving object. This object may be classified as novelty from which a child can learn something. At a certain stage of development, the baby will taste all objects around it in order to learn what might be edible. A kid in a room of toys will zero in on a toy that he will deem as a best satisfier of young mind's curiosity. The [learn drive](https://supermemo.guru/wiki/Learn_drive) is a powerful brain mechanism that gave babies their label of [never-ceasing perfect learning machines](https://supermemo.guru/wiki/How_baby_brain_does_not_work).
 
 **学习内驱力是中枢神经系统适应发展的重要本能**。婴儿在他们的环境中寻找新奇的元素。这是一种寻找和发现值得学习的东西的方法。婴儿可以在头上的空间里随机搜索，直到找到一个移动的物体。这个物体可以归类为新奇的东西，孩子可以从中学到东西。在发育的某一阶段，婴儿会品尝周围所有的东西，以便了解什么是可以吃的。一个孩子在一屋子玩具里，会把注意力集中在一件玩具上，他认为这是最能满足年轻心灵好奇心的玩具。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)是一种强大的大脑机制，给婴儿们贴上了[永不停止的完美学习机器](https://supermemo.guru/wiki/How_baby_brain_does_not_work)的标签。
+
+Some scientists believe that we innately lose our novelty seeking and our [learn drive](https://supermemo.guru/wiki/Learn_drive) with age. This claim is dangerously wrong. There are indeed many indicators of decline. An adult is no longer fascinated with all things that move. He will find a room of toys boring. He will spit out new tastes and often hate new dishes. Someone, who has never tasted a snail or a beetle, isn't likely to learn to love dishes based on snails or insects. Older people no longer show fascination with the world that is so typical to a young knowledge-hungry student. Older people's passions seem to be on a steady decline with age.
+
 一些科学家认为，随着年龄的增长，我们自然地就失去了求新的欲望和[学习内驱力](https://supermemo.guru/wiki/Learn_drive)。这种说法是危险的错误。确实有许多下降的迹象。成年人不再对所有会动的东西着迷。他会觉得一屋子玩具很无聊。他会吐出未尝过味道，经常讨厌新菜。从来没有吃过蜗牛或甲虫的人不太可能喜欢吃蜗牛或昆虫做的菜。对于渴望知识的年轻学生来说，这个世界是很典型的，但年长者不再对这个世界感兴趣。随着年龄的增长，年长者的热情似乎在稳步下降。
 
-理解学习[内驱力](https://supermemo.guru/wiki/Learn_drive)和它被认为随着时间推移而下降的机制是[优化教育](https://supermemo.guru/wiki/Optimization_of_education)的关键。
+> Understanding the [learn drive](https://supermemo.guru/wiki/Learn_drive) and the mechanism by which it supposedly declines over time is essential for [optimizing education](https://supermemo.guru/wiki/Optimization_of_education)
+>
+> 理解学习[内驱力](https://supermemo.guru/wiki/Learn_drive)和它被认为随着时间推移而下降的机制是[优化教育](https://supermemo.guru/wiki/Optimization_of_education)的关键。
 
-## 5.2 学习内驱力 与 知识
+## 5.2 Learn drive vs. knowledge学习内驱力与知识
 
-**随着年龄的增长，削弱学习内驱力的主要因素是已有的知识。**还有一些次要因素，如(1)当前知识的“吸引力”下降，(2)大脑的实际老化。老化可能会导致神经网络的老化、突触削减、精神活力的减少等。这些都可以通过精神保健和学习本身来预防。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)和热情可以一直保持到百岁。在健康的生活方式中，保持大脑的活力比保持运动系统的活力更容易。
+**The main factor that undermines the learn drive with age is the established knowledge**. There are also secondary factors such as (1) declining "attractive power" of the current knowledge and (2) the actual aging of the brain. Aging may result in a decline in neural networks, synaptic pruning, lesser mental energy, etc. Those can be largely prevented with mental hygiene and learning itself. It is possible to retain the [learn drive](https://supermemo.guru/wiki/Learn_drive) and passion for learning till the age of hundred. With healthy lifestyle, it is easier to retain vitality of the brain than it is to retain, for example, the vitality of the motor system.
 
-一些求新欲可能是发育过程的一部分（例如，婴儿的品味探索阶段）。然而，这些过程并没有在我们试图引导年轻一代在教育课程中进行的探索中发挥重要作用。
+**随着年龄的增长，削弱学习内驱力的主要因素是已有的知识。**还有一些次要因素，如（1）当前知识的“吸引力”下降，（2）大脑的实际老化。老化可能会导致神经网络的老化、突触削减、精神活力的减少等。这些都可以通过精神保健和学习本身来预防。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)和热情可以一直保持到百岁。在健康的生活方式中，保持大脑的活力比保持运动系统的活力更容易。
+
+Some of novelty seeking may be part of a developmental program (e.g. baby's taste-seeking stage). However, those programs would not play an essential part of explorations we tend to induce in the young generation in the course of their education.
+
+一些求新欲可能是发育过程的一部分（例如，婴儿的味觉探索阶段）。然而，这些过程并没有在我们试图引导年轻一代在教育课程中进行的探索中发挥重要作用。
+
+Knowledge itself is the most powerful extinguisher of the [learn drive](https://supermemo.guru/wiki/Learn_drive). It can be illustrated with our interest in a particular book. A book is interesting in the first read. We are rarely interested in reading the book for the second time. Re-reading what we know is rarely exciting. Overtime, with some help from forgetting, the book may become interesting again. A forgotten book may reactivate reward circuits via the learn drive guidance system. Once the knowledge is established, it takes away the incentive to seek new knowledge. Forgetting is also helpful in other areas, e.g. the emotional effects of a song on the radio. The difference is that music is far less about declarative memory and far more about patterns and beauty. Like a nice sunset. You do not need to forget one to love another. This is why a catchy tune can stay addictive despite multiple replays, while a jazzy or classical masterpiece can retain its appeal for life if not played ad nauseam.
 
 知识本身就是学习内驱力最强大的[灭火器](https://supermemo.guru/wiki/Learn_drive)。这可以用我们对某本书的兴趣来说明。一本书初读时很有趣。我们很少有兴趣把这本书再读一遍。重读我们所知道的东西很少令人兴奋。随着时间的推移，在遗忘的作用下，这本书可能会再次变得有趣。被遗忘的书可以通过学习内驱力引导系统重新激活奖励回路。一旦知识建立起来，就失去了寻找新知识的动力。遗忘在其他方面也有帮助，比如收音机里一首歌的情绪影响。不同之处在于，音乐与陈述性记忆的关系要小得多，而与模式和美感的关系要大得多。就像美丽的日落。你不需要忘记一次日落去爱另一次日落。这就是为什么一首朗朗上口的曲子即使多次重放也能让人上瘾，而一首爵士或古典名乐即使不被反复播放，也能让人永生难忘。
 
-知识会破坏新鲜感。没有一个追求新奇的大脑中枢会随着年龄的增长而衰退。在开发过程中没有启动过新奇的灭火程序。一旦无知的领域被填满，知识领域的新奇感就会消失。
+Knowledge undermines novelty. There is no novelty seeking brain center that would specifically decline with age. There is no novelty seeking extinguishing program activated in development. Novelty of an area of knowledge disappears once an area of ignorance is filled up.
 
 知识的增加会破坏求新欲。神经中枢随着年龄的增加不会削减一个人的求新欲。 这种求新欲也不会随着一个人的发展而泯灭。 但当一个人在某一个的知识领域的无知被填满后，他的求新欲也随之消散
 
+The good news coming from our understanding of the [learn drive](https://supermemo.guru/wiki/Learn_drive) is that it can be employed in lifelong passionate education. Learning can be as much fun at 80 as it is at 15.
+
 我们对[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的理解带来的好消息是，学习内驱力可以在终生的激情教育中起作用。80 岁的时候学习和 15 岁的时候一样有趣。
 
-## 5.3 学习内驱力 与 学习
+## 5.3 Learn drive vs. learning学习内驱力与学习
 
 保持学习热情的主要技巧是不断学习本身。学习使大脑充满新知识。然而，它也识别和扩大了不懂的领域。通过选择合适的学习材料，我们可以不断地寻找新的领域来填补。这是[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)的最佳方式。只有学习者自己才能有效地识别出知道的领域、不懂的领域以及中间适合学习的领域。
 
