--- a/我再也不会把孩子送去学校/00.Content目录.md
+++ b/我再也不会把孩子送去学校/00.Content目录.md
@@ -29,15 +29,15 @@
   - [5.1Learn drive vs. age学习内驱力与年龄](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._age)
   - [5.2Learn drive vs. knowledge学习内驱力与知识](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._knowledge)
   - [5.3Learn drive vs. learning学习内驱力与学习](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_vs._learning)
-  - [5.4Teacher problem](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Teacher_problem)
-  - [5.5Learn drive distortions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_distortions)
-  - [5.6School enthusiasm](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#School_enthusiasm)
-  - 5.7Powering learn drive with SuperMemo
-    - [5.7.1Enhancing the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Enhancing_the_learn_drive)
-    - [5.7.2Stunting the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Stunting_the_learn_drive)
-    - [5.7.3Learn drive at middle age](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_at_middle_age)
-  - [5.8Perpetual learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Perpetual_learn_drive)
-  - [5.9Summary: Changes to the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Changes_to_the_learn_drive)
+  - [5.4Teacher problem老师的困境](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Teacher_problem)
+  - [5.5Learn drive distortions学习内驱力扭曲](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_distortions)
+  - [5.6School enthusiasm上学热情](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#School_enthusiasm)
+  - 5.7Powering learn drive with SuperMemo用 SuperMemo 加强学习内驱力
+    - [5.7.1Enhancing the learn drive增强学习内驱力](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Enhancing_the_learn_drive)
+    - [5.7.2Stunting the learn drive阻碍学习内驱力](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Stunting_the_learn_drive)
+    - [5.7.3Learn drive at middle age中年时期的学习内驱力](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_at_middle_age)
+  - [5.8Perpetual learn drive永恒的学习内驱力](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Perpetual_learn_drive)
+  - [5.9Summary: Changes to the learn drive总结: 改变学习内驱力的因素](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Changes_to_the_learn_drive)
 - 6Learn drive and reward
   - [6.1The main problem in education](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_main_problem_in_education)
   - [6.2Learn drive and entropy](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learn_drive_and_entropy)
