--- a/我再也不会把孩子送去学校/07.Learn drive vs. learned helplessness学习内驱力与习得性无助.md
+++ b/我再也不会把孩子送去学校/07.Learn drive vs. learned helplessness学习内驱力与习得性无助.md
@@ -1,5 +1,7 @@
 # 7 Learn drive vs. learned helplessness
 
+# 学习内驱力与习得性无助
+
 ## 7.1 Loss of learn drive with age
 
 The claim that we lose the [learn drive](https://supermemo.guru/wiki/Learn_drive) with age is dangerous. We accept the fact that students get gradually less passionate about learning. This perpetuates the parasitic myth that learning is hard, school is boring, and that these facts should be accepted like death and taxes. We are supposed to hate school as much as we hate our jobs. We are supposed to grin-and-bear it (see: [The grind is the glory](https://supermemo.guru/wiki/The_grind_is_the_glory))! This myth is stealing youth from the young generation and the love of life from millions of people. The effects of lost [learn drive](https://supermemo.guru/wiki/Learn_drive) do their damage deep into adulthood.
@@ -72,12 +74,23 @@ My writing about learned helplessness may sound a bit dramatic or even depressin
 
 ## 7.7 Summary: School and learn drive
 
+## 总结：学校和学习内驱力
+
 - Compulsory schooling suppresses the [learn drive](https://supermemo.guru/wiki/Learn_drive)
+- 义务教育抑制学习内驱力
 - Most kids adapt to the compulsion of schooling via learned helplessness
+- 大多数孩子通过习得性无助来适应学校教育的强迫
 - Classroom focus is maximized by suppression of creativity via learned helplessness
+- 最大限度地集中课堂注意力是以通过习得性无助抑制创造力为代价
 - Learned helplessness may lead to problems such as depression, obesity, addictions, risk-taking, aggression, bullying, cruelty, etc.
+- 习得性无助可能导致抑郁、肥胖、上瘾、冒险、攻击、欺凌、冷酷等问题
 - As experience shapes the brain, inaction in the wake of learned helplessness, is bound to stunt cognitive abilities of children
+- 经验塑造大脑，习得性无助后的不作为，必然会阻碍儿童的认知能力
 - Learned helplessness begins with forceful weaning (natural weaning may take 3-4 years)
+- 习得性无助始于强行断奶（自然断奶可能需要3-4年）
 - Learned helplessness continues in daycare with a rigid regiment of rules enforced by strangers
+- 由于陌生人强制执行的严格管制规则，习得性无助在日托所持续存在
 - Large [behavioral spaces](https://supermemo.guru/wiki/Behavioral_space) with fewer rules are beneficial in cognitive development
+- 规则较少的广阔行为空间有利于认知发展
 - Unrestrained development of personality may take three decades. Accelerating that process limits human cognitive powers
+- 个性的自由发展可能需要三十年。加速这一过程限制了人类的认知能力
